# Scripts

./: haskell_fibs.hs  haskell_perf_test.hs  init.vim  izp_proj3.hs  monte_carlo.c  objekty
haskell/expr-parse/: ShuntingYard.hs
haskell/json-parse/: Main.hs
haskell/rw-haskell/ch05/: Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs
haskell/rw-haskell/ch09/: BetterPredicate.hs  ControlledVisit.hs  RecursiveContents.hs  TAGS
haskell/rw-haskell/ch10/: PNM.hs
haskell/rw-haskell/ch12/: Barcode.hs  Parse.hs
haskell/scheme-tutorial/: hello  main.hi  main.hs
haskell/snap-web/: .gitignore  LICENSE  README.md  snap-web.cabal  stack.yaml
haskell/snap-web/src/: Main.hs
haskell/snap-web/src/api/: Core.hs
haskell/snap-web/views/: index.html
python/: a.db  adventurer.py  armour.py  cli.py  curses_ex.py  curses_snake.py  curses_test.py  db.py  dnd-cli.py  game.db  item.py  test.db  test.pkl  weapon.py
