name:                snap-web
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DrGumby/snap-web#readme
license:             BSD3
license-file:        LICENSE
author:              Kamil Vojanec
maintainer:          xvojan00@stud.fit.vutbr.cz
copyright:           GNU GPL
category:            web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable snap-web
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, snap-core, snap-server
